Add GET /nodes/{node_id}/hardware endpoint
